Add --add-opens=java.prefs/java.util.prefs=ALL-UNNAMED to fix jarchivelib on Java 17